attached_assets/Pasted-Starting-project-at-home-runner-workspace-JsonFileError-Error-parsing-JSON-expo-nam-1741363212483.txt
Starting project at /home/runner/workspace
JsonFileError: Error parsing JSON: {
  "expo": {
    "name": "muslim-todo",
    "slug": "muslim-todo",
    "version": "1.0.0",
    "orientation": "portrait",
    "icon": "./assets/images/icon.png",
    "scheme": "myapp",
    "userInterfaceStyle": "automatic",
    "newArchEnabled": true,
    "extra": {
      "API_URL": process.env.API_URL,
      "ENABLE_AI_FEATURES": process.env.ENABLE_AI_FEATURES === "true",
      "APP_NAME": process.env.APP_NAME
    },
    "ios": {
      "supportsTablet": true
    },
    "android": {
      "adaptiveIcon": {
        "foregroundImage": "./assets/images/adaptive-icon.png",
        "backgroundColor": "#ffffff"
      }
    },
    "web": {
      "bundler": "metro",
      "output": "static",
      "favicon": "./assets/images/favicon.png"
    },
    "plugins": [
      "expo-router",
      [
        "expo-splash-screen",
        {
          "image": "./assets/images/splash-icon.png",
          "imageWidth": 200,
          "resizeMode": "contain",
          "backgroundColor": "#ffffff"
        }
      ]
    ],
    "experiments": {
      "typedRoutes": true
    }
  }
}

├─ File: /home/runner/workspace/app.json
└─ Cause: SyntaxError: JSON5: invalid character 'p' at 12:18
  10 |     "newArchEnabled": true,
  11 |     "extra": {
> 12 |       "API_URL": process.env.API_URL,
     |                  ^
  13 |       "ENABLE_AI_FEATURES": process.env.ENABLE_AI_FEATURES === "true",
  14 |       "APP_NAME": process.env.APP_NAME
  15 |     },
JsonFileError: Error parsing JSON: {
  "expo": {
    "name": "muslim-todo",
    "slug": "muslim-todo",
    "version": "1.0.0",
    "orientation": "portrait",
    "icon": "./assets/images/icon.png",
    "scheme": "myapp",
    "userInterfaceStyle": "automatic",
    "newArchEnabled": true,
    "extra": {
      "API_URL": process.env.API_URL,
      "ENABLE_AI_FEATURES": process.env.ENABLE_AI_FEATURES === "true",
      "APP_NAME": process.env.APP_NAME
    },
    "ios": {
      "supportsTablet": true
    },
    "android": {
      "adaptiveIcon": {
        "foregroundImage": "./assets/images/adaptive-icon.png",
        "backgroundColor": "#ffffff"
      }
    },
    "web": {
      "bundler": "metro",
      "output": "static",
      "favicon": "./assets/images/favicon.png"
    },
    "plugins": [
      "expo-router",
      [
        "expo-splash-screen",
        {
          "image": "./assets/images/splash-icon.png",
          "imageWidth": 200,
          "resizeMode": "contain",
          "backgroundColor": "#ffffff"
        }
      ]
    ],
    "experiments": {
      "typedRoutes": true
    }
  }
}

├─ File: /home/runner/workspace/app.json
└─ Cause: SyntaxError: JSON5: invalid character 'p' at 12:18
  10 |     "newArchEnabled": true,
  11 |     "extra": {
> 12 |       "API_URL": process.env.API_URL,
     |                  ^
  13 |       "ENABLE_AI_FEATURES": process.env.ENABLE_AI_FEATURES === "true",
  14 |       "APP_NAME": process.env.APP_NAME
  15 |     },
    at parseJsonString (/home/runner/workspace/node_modules/@expo/json-file/build/JsonFile.js:190:19)
    at JsonFile.read (/home/runner/workspace/node_modules/@expo/json-file/build/JsonFile.js:152:12)
    at getStaticConfig (/home/runner/workspace/node_modules/@expo/cli/node_modules/@expo/config/build/getConfig.js:64:38)
    at getConfig (/home/runner/workspace/node_modules/@expo/cli/node_modules/@expo/config/build/Config.js:206:85)
    at startAsync (/home/runner/workspace/node_modules/@expo/cli/build/src/start/startAsync.js:124:70)
    at expoStart (/home/runner/workspace/node_modules/@expo/cli/build/src/start/index.js:142:12)
